--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "bcryptjs": "^3.0.2",
+    "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
     "next-auth": "^4.24.6",
     "next-themes": "^0.4.6",
@@ -33,12 +34,16 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
+    "react-map-gl": "^8.0.1",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.6.0",
     "@types/bcryptjs": "^2.4.6",
+    "@types/mapbox-gl": "^3.4.1",
+    "@types/react-map-gl": "^6.1.7",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
     "prisma": "^5.10.2"
