--- a/package.json
+++ b/package.json
@@ -20,15 +20,16 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
     "@googlemaps/js-api-loader": "^1.16.2",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "^5.22.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
+    "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
-    "next-auth": "^4.24.6",
+    "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^18",
