Refactor ESLint configuration and update dependencies
- Replaced the previous ESLint configuration with a new setup using `defineConfig` for better clarity and structure.
- Updated ESLint and TypeScript-related dependencies in `package.json` and `package-lock.json` to their latest versions for improved linting and type safety.
- Enhanced the `EditGymModal` component to include a more structured update data interface for better type handling.
- Refactored database connection logic in `db.ts` for improved clarity and consistency.
- Updated user profile fetching logic in `profile.ts` to enhance error handling and maintainability.

--- a/package.json
+++ b/package.json
@@ -41,13 +41,19 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@eslint/js": "^9.23.0",
     "@faker-js/faker": "^9.6.0",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
     "@types/mapbox-gl": "^3.4.1",
     "@types/react-map-gl": "^6.1.7",
-    "eslint": "^8",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "eslint": "^8.57.1",
     "eslint-config-next": "14.1.0",
-    "prisma": "^5.10.2"
+    "eslint-plugin-react": "^7.37.4",
+    "globals": "^16.0.0",
+    "prisma": "^5.10.2",
+    "typescript-eslint": "^8.28.0"
   }
 }
