Update ESLint ignore rules and enhance UI components
- Refined .eslintignore file for clearer categorization of ignored files, including dependencies and build outputs.
- Added a testimonial block to the Home page for improved user engagement.
- Simplified the EditGymModal component by removing unused event handlers for better maintainability.
- Introduced form error handling in NewGymPage for enhanced user feedback during gym creation.
- Updated user not found message and subscription notifications to use HTML entities for better accessibility.

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,17 +1,15 @@
-# Node modules
+# Dependencies
 node_modules/
 
-# Next.js build outputs
+# Build outputs
 .next/
 out/
 build/
 dist/
-
-# Cache directories
 .cache/
 .vercel/
 
-# Public assets
+# Static files
 public/
 
 # Config files
