--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
   },
   "dependencies": {
     "@auth/prisma-adapter": "^2.8.0",
+    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@prisma/client": "^5.22.0",
     "@types/node": "^20",
