--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
     "postinstall": "prisma generate",
     "db:setup": "node ./scripts/setup-db.js",
     "db:seed": "node ./prisma/seed.js",
+    "db:seed:sports": "node ./prisma/sportfields-seed.js",
+    "db:seed:gyms": "node ./prisma/gyms-seed.js",
+    "db:seed:clubs": "node ./prisma/clubs-seed.js",
+    "db:seed:subscriptions": "node ./prisma/subscription-seed.js",
     "db:push": "prisma db push",
     "db:generate": "prisma generate",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "prisma": {
     "seed": "node ./prisma/seed.js"
@@ -26,21 +32,33 @@
     "@fullcalendar/timegrid": "^6.1.15",
     "@googlemaps/js-api-loader": "^1.16.2",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-slot": "^1.1.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.21",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.6.3",
+    "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.10.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-map-gl": "^8.0.1",
+    "stripe": "^18.0.0",
+    "tailwind-merge": "^3.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "^5",
     "zod": "^3.22.4"
@@ -48,9 +66,12 @@
   "devDependencies": {
     "@eslint/js": "^9.23.0",
     "@faker-js/faker": "^9.6.0",
+    "@testing-library/jest-dom": "^6.6.3",
     "@types/bcrypt": "^5.0.2",
     "@types/bcryptjs": "^2.4.6",
+    "@types/jest": "^29.5.14",
     "@types/mapbox-gl": "^3.4.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/react-map-gl": "^6.1.7",
     "@typescript-eslint/eslint-plugin": "^8.28.0",
     "@typescript-eslint/parser": "^8.28.0",
@@ -58,6 +79,8 @@
     "eslint-config-next": "14.1.0",
     "eslint-plugin-react": "^7.37.4",
     "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "prisma": "^5.10.2",
     "typescript-eslint": "^8.28.0"
   }
