Refactor gym verification logic and enhance subscription models
- Removed the isVerified field from various gym and club seeding scripts, simplifying the data structure.
- Updated the cursor configuration to exclude isVerified from gym details.
- Introduced new Subscription and PaymentRecord models in the Prisma schema for better subscription management.
- Enhanced Gym and User interfaces to reflect the updated data structure and improve type safety.
- Refactored API routes to align with the new subscription model, ensuring consistency in data handling.

--- a/cursor.config.json
+++ b/cursor.config.json
@@ -196,7 +196,7 @@
     },
     "gym": {
       "core": ["id", "name", "address", "city", "rating"],
-      "details": ["description", "facilities", "images", "priceRange", "latitude", "longitude", "status", "isVerified"],
+      "details": ["description", "facilities", "images", "priceRange", "latitude", "longitude", "status"],
       "relations": ["reviews", "owner"]
     },
     "review": {
