--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
     "react": "^18",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-map-gl": "^8.0.1",
