--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,18 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:15-alpine
-    container_name: fit-nass-postgres
+  mongo:
+    image: mongo:latest
+    container_name: fit-nass-mongo
     restart: always
     ports:
-      - "5432:5432"
-    environment:
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: fitnass
+      - "27017:27017"
     volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - mongo-data:/data/db
+    # Optional: Add environment variables for authentication if needed
+    # environment:
+    #   MONGO_INITDB_ROOT_USERNAME: your_username
+    #   MONGO_INITDB_ROOT_PASSWORD: your_password
 
 volumes:
-  postgres-data: 
+  mongo-data: 
