--- a/package.json
+++ b/package.json
@@ -31,11 +31,12 @@
     "@fullcalendar/react": "^6.1.17",
     "@fullcalendar/timegrid": "^6.1.17",
     "@googlemaps/js-api-loader": "^1.16.2",
-    "@prisma/client": "^5.22.0",
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-progress": "^1.1.2",
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-toast": "^1.2.10",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -45,6 +46,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.10.0",
@@ -59,8 +61,9 @@
     "react-icons": "^5.0.1",
     "react-map-gl": "^8.0.1",
     "stripe": "^18.0.0",
-    "tailwind-merge": "^3.1.0",
+    "tailwind-merge": "^3.2.0",
     "tailwindcss": "^3.4.17",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5",
     "zod": "^3.22.4"
   },
@@ -82,7 +85,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "prisma": "^5.10.2",
+    "prisma": "^6.6.0",
     "typescript-eslint": "^8.28.0"
   }
 }
