--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next-sitemap",
     "start": "next start",
     "lint": "next lint",
     "postinstall": "prisma generate",
@@ -85,6 +85,7 @@
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "next-sitemap": "^4.2.3",
     "prisma": "^6.6.0",
     "typescript-eslint": "^8.28.0"
   }
