--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "db:generate": "prisma generate",
     "db:studio": "prisma studio",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "clean-default-images": "node scripts/replace-default-images.js",
+    "migrate-to-cloudinary": "node scripts/migrate-to-cloudinary.js",
+    "upload-logo": "node scripts/upload-logo-to-cloudinary.js"
   },
   "prisma": {
     "seed": "node ./prisma/seed.js"
@@ -44,14 +47,17 @@
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.6.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.10.0",
+    "mongodb": "^6.16.0",
     "next": "14.1.0",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "postcss": "^8.5.3",
