Refactor Cloudinary image handling and unify place data structure
- Renamed CloudinaryImage component to ImageWithCloudinarySupport for clarity.
- Updated various components to utilize the new ImageWithCloudinarySupport for consistent image handling.
- Refactored gym and place data structures to enhance type safety and maintainability across the application.
- Improved error handling and data mapping for gym and place retrieval, ensuring a seamless user experience.

--- a/cursor.config.json
+++ b/cursor.config.json
@@ -192,7 +192,7 @@
     "user": {
       "core": ["id", "name", "email", "image", "role", "password"],
       "profile": ["bio", "city", "memberSince", "status"],
-      "relations": ["favoriteGyms", "reviews", "bookings", "subscriptions"]
+      "relations": ["favoritePlaces", "reviews", "bookings", "subscriptions"]
     },
     "gym": {
       "core": ["id", "name", "address", "city", "rating"],
