--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.10",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -52,6 +53,9 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.5.0",
     "framer-motion": "^12.6.3",
+    "i18next": "^25.2.1",
+    "i18next-resources-to-backend": "^1.2.1",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.487.0",
     "mapbox-gl": "^3.10.0",
     "mongodb": "^6.16.0",
@@ -64,6 +68,7 @@
     "react": "^18",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18",
+    "react-i18next": "^15.5.2",
     "react-icons": "^5.0.1",
     "react-map-gl": "^8.0.1",
     "stripe": "^18.0.0",
